--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script defer src="https://app.embed.im/snow.js"></script>
   </head>
   <body>
     <div class="card-tree">
-      <div class="santa">
-        🎅
-        <div className="sleigh">🛷</div>
-      </div>
-
       <div class="tree-container">
         <div class="star">★</div>
         <div class="tree">
@@ -65,10 +61,6 @@
         <p class="message-subtitle">🌟 Que la magia de la Navidad ilumine tu corazón y tu hogar. 🌟</p>
         <p class="message-subtitle">🎄 ¡Te deseo felicidad, paz y amor! 🎄</p>
    
-      </div>
-      <div class="santabajo">
-        🛷
-        <div className="sleighbajo">🎅</div>
       </div>
     </div>
   </body>
